--- a/Styles/github.css
+++ b/Styles/github.css
@@ -91,7 +91,7 @@ rect.ContributionCalendar-day[data-level='4'] {
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
     font-size: 11px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .contrib-column-first {
@@ -208,3 +208,6 @@ text.ContributionCalendar-label {
     fill: #ccc;
     font-size: 11px;
 }
+
+
+
