--- a/Styles/index.css
+++ b/Styles/index.css
@@ -220,12 +220,13 @@ header.shadow {
 .homeImage img {
   width: 85%;
   border: 1px solid rgb(201, 201, 201);
-  margin-top: 20px;
+  /* margin-top: 20px; */
   transition: transform 3s ease;
 
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  /* border: 10px solid #080808; */
+  border-radius: 100%;
   padding: 5px;
+
 }
 
 .homeImage img:hover {
